--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ name = "xcg-app"
 path = "src/main.rs"
 
 [dependencies]
+byteorder = "1.2.3"
 itertools = "0.7.8"
 rand = "0.5.3"
 rand_core = "0.2.1"
-byteorder = "1.2.3"
-derivative = "1.0.0"
+regex = "1.0.1"
