--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "xcg-coding-game"
 version = "0.1.0"
 keywords = ["xcg", "coding", "game"]
 authors = ["Nick Linker <nlinker@gmail.com>"]
+#edition = 2018
 
 [lib]
 name = "xcg"
